--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "grunt-contrib-nodeunit": "^0.4.1",
     "jit-grunt": "^0.8.0",
     "path": "^0.4.9",
-    "time-grunt": "^0.4.0"
+    "time-grunt": "^0.4.0",
+    "casperjs": "~1.1.0-beta3"
   },
   "dependencies": {
     "bower": "^1.3.9",
