--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "phantomjs": "^1.9.7-15"
   },
   "peerDependencies": {
-    "phantomjs": "1.9.7-14"
+    "phantomjs": "^1.9.7-15"
   },
   "keywords": [
     "gruntplugin",
