--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
   "dependencies": {
     "bower": "^1.3.9",
     "temporary": "0.0.8",
-    "phantomjs": "^1.9.7-15"
+    "phantomjs": "^1.9.7-15",
+    "casperjs": "~1.1.0-beta3"
   },
   "peerDependencies": {
     "phantomjs": "^1.9.7-15"
