--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "casperjs": "~1.1.0-beta3"
   },
   "peerDependencies": {
-    "phantomjs": "^1.9.7-15"
+    "phantomjs": "^1.9.7-15",
+    "casperjs": "~1.1.0-beta3"
   },
   "keywords": [
     "gruntplugin",
