--- a/package.json
+++ b/package.json
@@ -52,18 +52,15 @@
     "grunt-contrib-nodeunit": "^0.4.1",
     "jit-grunt": "^0.8.0",
     "path": "^0.4.9",
-    "time-grunt": "^0.4.0",
-    "casperjs": "~1.1.0-beta3"
+    "time-grunt": "^0.4.0"
   },
   "dependencies": {
     "bower": "^1.3.9",
     "temporary": "0.0.8",
-    "phantomjs": "^1.9.7-15",
-    "casperjs": "~1.1.0-beta3"
+    "phantomjs": "^1.9.7-15"
   },
   "peerDependencies": {
-    "phantomjs": "^1.9.7-15",
-    "casperjs": "~1.1.0-beta3"
+    "phantomjs": "^1.9.7-15"
   },
   "keywords": [
     "gruntplugin",
