--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "node": ">= 0.10.0"
   },
   "scripts": {
-    "test": "grunt test",
-    "postinstall": "node_modules/bower/bin/bower install"
+    "test": "grunt test"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -55,9 +54,8 @@
     "time-grunt": "^0.4.0"
   },
   "dependencies": {
-    "bower": "^1.3.9",
     "temporary": "0.0.8",
-    "phantomjs": "^1.9.7-15"
+    "phantomcss": "~0.9.0"
   },
   "peerDependencies": {
     "phantomjs": "^1.9.7-15"
