phantomjs as dependencies, bump version

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "grunt-phantomcss",
   "description": "Plugin to do CSS regression testing via PhantomCSS.",
-  "version": "0.3.2",
-  "homepage": "https://github.com/anselmh/grunt-phantomcss",
+  "version": "0.4.0",
+  "homepage": "https://github.com/codexico/grunt-phantomcss",
   "author": {
     "name": "Chris Gladd",
     "email": "chris.m.gladd@gmail.com"
@@ -22,19 +22,24 @@
       "name": "Anselm Hannemann",
       "email": "info@anselm-hannemann.com",
       "url": "http://helloanselm.com/"
+    },
+    {
+      "name": "Francisco Kahil",
+      "email": "codexico@gmail.com",
+      "url": "https://github.com/codexico"
     }
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/anselmh/grunt-phantomcss.git"
+    "url": "git://github.com/codexico/grunt-phantomcss.git"
   },
   "bugs": {
-    "url": "https://github.com/anselmh/grunt-phantomcss/issues"
+    "url": "https://github.com/codexico/grunt-phantomcss/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/anselmh/grunt-phantomcss/blob/master/LICENSE-MIT"
+      "url": "https://github.com/codexico/grunt-phantomcss/blob/master/LICENSE-MIT"
     }
   ],
   "main": "Gruntfile.js",
@@ -55,10 +60,8 @@
   },
   "dependencies": {
     "temporary": "0.0.8",
-    "phantomcss": "~0.9.0"
-  },
-  "peerDependencies": {
-    "phantomjs": "^1.9.7-15"
+    "phantomcss": "~0.9.0",
+    "phantomjs": "~1.9.10"
   },
   "keywords": [
     "gruntplugin",
