--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
   },
   "dependencies": {
     "temporary": "0.0.8",
-    "phantomcss": "~0.9.0",
-    "phantomjs": "~1.9.10"
+    "phantomcss": "~0.9.0"
   },
   "keywords": [
     "gruntplugin",
