--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "grunt-phantomcss",
   "description": "Plugin to do CSS regression testing via PhantomCSS.",
-  "version": "0.2.3",
-  "homepage": "https://github.com/chrisgladd/grunt-phantomcss",
+  "version": "0.2.5",
+  "homepage": "https://github.com/EmilioAiolfi/grunt-phantomcss",
   "author": {
     "name": "Chris Gladd",
     "email": "chris.m.gladd@gmail.com"
@@ -17,33 +17,41 @@
       "name": "Aliaksei Sapach",
       "email": "dreamsonic@tut.by",
       "url": "https://github.com/asapach"
+    },
+    {
+      "name": "Emilio Aiolfi",
+      "email": "emilio.aiolfi@gmail.com",
+      "url": "https://github.com/EmilioAiolfi"
     }
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/chrisgladd/grunt-phantomcss.git"
+    "url": "git://github.com/EmilioAiolfi/grunt-phantomcss.git"
   },
   "bugs": {
-    "url": "https://github.com/chrisgladd/grunt-phantomcss/issues"
+    "url": "https://github.com/EmilioAiolfi/grunt-phantomcss/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/chrisgladd/grunt-phantomcss/blob/master/LICENSE-MIT"
+      "url": "https://github.com/EmilioAiolfi/grunt-phantomcss/blob/master/LICENSE-MIT"
     }
   ],
   "main": "Gruntfile.js",
   "engines": {
-    "node": ">= 0.8.0"
+    "node": ">= 0.10.0"
   },
   "scripts": {
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt": "~0.4.1"
+     "grunt": "^0.4.5",
+     "grunt-contrib-clean": "^0.6.0",
+     "grunt-contrib-jshint": "^0.10.0",
+     "grunt-contrib-nodeunit": "^0.4.1",
+     "jit-grunt": "^0.8.0",
+     "path": "^0.4.9",
+     "time-grunt": "^0.4.0"
   },
   "dependencies": {
     "temporary": "0.0.7",
@@ -52,7 +60,7 @@
     "phantomcss": "~0.9.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.1"
+    "phantomjs": "^1.9.7-14"
   },
   "keywords": [
     "gruntplugin",
